--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Cours-CPP)
 if(MSVC)
     add_compile_options(/std:c++17 /W4 /WX)
 else()
-    add_compile_options(-std=c++17 -Wall -W -Werror)
+    add_compile_options(-std=c++17)# -Wall -W -Werror)
 endif()
 
 # Chapters
